style.css
/*************************************************************** 
  author: elia atwater
  file: style.css
  description: stylesheet for personal website
***************************************************************/

/*************************************************************** 
  Color Palette
        COLOR PALLETTE
        #381460 rgb(56,20,96)
        #b21f66 rgb(178,31,102)
        #fe346e rgb(254,52,110)
        #ffbd69 rgb(255,189,105)
***************************************************************/

* {
  font-family: 'Anonymous Pro';
  box-sizing: border-box;
}

body, html {
  margin: 0;
  padding: 0;
}

/* ----------------------------------- INDEX ----------------------------------- */

.body {
  height: 100vh;
  width: 100vh;
}

/* 
  need position relative in order for content to use position absolute, since absolute is positioned
    relative to the nearest positioned ancestor (anything not static). therefore, we need to set
    col since it is the ancestor I wish to be relative to.
*/
.col {
  position: relative;
  float: left;
  
  height: 100vh;
  min-height: 850px;
  
  border: 25px solid whitesmoke;
}

.one {
  display: block;
  min-height: 850px;
  width: 30%;
  min-width: 600px;
}

.two {
  display: block;
  
  min-height: 850px;
  width: 65%;
  min-width: 950px;
}

/* clear floats after the columns*/
.index > .row:after{
  content: "";
  display: table;
  clear: both;
}

.bio > .row:after{
  content: "";
  display: table;
  clear: both;
}

mark.magenta_highlight {
  color: #381460;
  background-color: #b21f66;
  padding-left: 15px;
}

mark.yellow_highlight {
  color: #b21f66;
  background-color: #ffbd69;
  padding: 10px 25px 10px 25px;
  
}
/* -------------------- INDEX COLUMN ONE -------------------- */



/* --------- INDEX COLUMN ONE | NAVIGATION -------- */

.navigation_wrapper {
  position: absolute;
  
  top: 0;
  left: 0;
  
  display: block;
}

.navigation_wrapper > p {
  cursor: default;
  
  margin: 0;
  
  font-size: xx-large;
  font-style: italic;
  color: #ffbd69;
  
  padding: 15px 30px 15px 30px;
  
  transition: background-color 1.4s ease;
}

.dropdown_content {
  overflow: hidden;
  
  position: absolute;
  height: 0;
  width: 100%;
  
  transition: height 1.4s ease;
}

.dropdown_content > a {
  display: block;
  
  font-size: x-large;
  font-style: italic;
  color: #ffbd69;
  text-decoration: none;
  
  background-color: #381460;
  
  padding: 10px 15px 10px 15px;
  
  transition: background-color 1.4s ease;
}

.dropdown_content > a:hover {
  background-color: #fe346e;
}

.navigation_wrapper > p:hover {
  background-color: #fe346e;
}

.navigation_wrapper:hover .dropdown_content {
  height: 250px;
}

/* ---------- INDEX COLUMN ONE | CONTENT ---------- */

/* align content container to the bottom right, float items to the right*/
.one > .content {
  position: absolute;
  bottom: 0;
  right: 0;
}

.content > * {
  margin-right: 10px;
  
  float: right;
}

/* profile imag e*/
.content  img {
  width: 350px;
  height: 350px;
  border-radius: 50%;
}

.content > a {
  margin-left: 0px;
  margin-top: 0px;
  margin-bottom: 15px;
}

.content > h1 {
  margin-left: 0px;
  margin-top: 0px;
  margin-bottom: 20px;
  
  letter-spacing: .25em;
  
  font-size: xxx-large;
  font-style: italic;
}

.content > h2 {
  margin-left: 0px;
  margin-top: 0px;
  margin-bottom: 15px;
  
  font-size: xx-large;
  font-style: italic;
}

/* clear floats after the headings*/
.one::after {
  content: "";
  display: table;
  clear: both;
}


/* -------------------- INDEX COLUMN TWO -------------------- */

/* ----------- INDEX COLUMN TWO | GRID ----------- */

.index .grid_container {
  display: grid;
  
  margin-left: 20px;
  
  width: 100%;
  height: 100%;
  
  grid-template-columns: 20% 20% 20% 20% 20%;
  grid-template-rows: 20% 20% 20% 20% 20%;
}

@keyframes tileflow {
  0%    {background-color:#381460;}
  33%   {background-color:#b21f66;}
  66%   {background-color:#fe346e;}
  100%  {background-color:#ffbd69;}
}

.index .grid-item {
  display: block;
  
  animation-name: tileflow;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;
}


/* ROW 1 */

.r1c1 {
  animation-delay: 0s;
}

.r1c2 {
  animation-delay: -.16s;
}

.r1c3 {
  animation-delay: -.32s;
}

.r1c4 {
  animation-delay: -.48s;
}

.r1c5 {
  animation-delay: -.64s;
}

/* ROW 2 */

.r2c1 {
  animation-delay: -.8s;
}

.r2c2 {
  animation-delay: -.96s;
}

.r2c3 {
  animation-delay: -1.12s;
}

.r2c4 {
  animation-delay: -1.28s;
}

.r2c5 {
  animation-delay: -1.44s;
}

/* ROW 3 */

.r3c1 {
  animation-delay: -1.6s;
}

.r3c2 {
  animation-delay: -1.76s;
}

.r3c3 {
  animation-delay: -1.92s;
}

.r3c4 {
  animation-delay: -2.08s;
}

.r3c5 {
  animation-delay: -2.24s;
}

/* ROW 4 */

.r4c1 {
  animation-delay: -2.4s;
}

.r4c2 {
  animation-delay: -2.56s;
}

.r4c3 {
  animation-delay: -2.72s;
}

.r4c4 {
  animation-delay: -2.88s;
}

.r4c5 {
  animation-delay: -3.04s;
}

/* ROW 5 */

.r5c1 {
  animation-delay: -3.2s;
}

.r5c2 {
  animation-delay: -3.36s;
}

.r5c3 {
  animation-delay: -3.52s;
}

.r5c4 {
  animation-delay: -3.68s;
}

.r5c5 {
  animation-delay: -3.84s;
}


/* ------------------------------------ BIO ------------------------------------ */


.square_item {
  position: absolute;
}

.bio .grid_container {
  display: grid;
  
  margin-top: 25px;
  
  width: 100%;
  height: 100%;
  
  grid-template-columns: 25% 25% 25% 25%;
  grid-template-rows: 50% 50%;
}

.bio .grid-item {
  display: block;
}

#bioG1 {
  grid-row-start: 1;
  grid-column-start: 1;
}

#bioG2 {
  grid-row-start: 1;
  grid-column-start: span 2;
  
  margin-left: -75px;
  margin-top: 165px;
}

#bioG3 {
  grid-row-start: 2;
  grid-column-start: 4;
  
  text-align: start;
}

#bioG4 {
  grid-row-start: 2;
  grid-column-start: span 3;
  
  text-align: end;
  
  margin-top: 160px;
  margin-right: 40px;
}

#bioG1 > div {
  width: 60%;
  height: 95%;

  box-shadow: 25px 25px #381460;
  
  margin-top: 25px
}

#bioG1 > div > h3 {
  position: absolute;
  
  top: 135px;
  left: 50px;
  
  margin: 0;
  
  font-size: xxx-large;
  font-style: italic;
}

#bioG3 > div {
  width: 60%;
  height: 95%;

  box-shadow: -25px -25px #381460;
  
  margin-top: -25px;
}

#bioG3 > div > h3 {
  position: absolute;
  
  bottom: 135px;
  right: 160px;
  
  margin: 0;
  
  font-size: xxx-large;
  font-style: italic;
}

#bioG2 > h1 > a {
  color: #381460;
  
  transition: color .8s ease;
}

.yellow_highlight > a {
  color: #381460;
  
  transition: color .8s ease;
}

#bioG2 > h1 > a:hover {
  color: #fe346e;
}

.yellow_highlight > a:hover {
  color: #fe346e;
}

